[gd_scene load_steps=6 format=3 uid="uid://cgf0ufiabknqv"]

[ext_resource type="Script" path="res://Menu de Pausa/menu_de_pause.gd" id="1_58bj8"]
[ext_resource type="FontFile" uid="uid://cfhb28salhxn" path="res://Fonts/terminal-grotesque.ttf" id="1_gtvhd"]
[ext_resource type="Shader" path="res://Menu de Pausa/menu_de_pause.gdshader" id="2_eecoy"]
[ext_resource type="PackedScene" uid="uid://cop1g3lxprhax" path="res://Menu Principal/Menu de Opcoes/menu_de_opcoes.tscn" id="3_h0rh2"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wwkh8"]
shader = ExtResource("2_eecoy")
shader_parameter/INTENSIDADE = 2.5

[node name="menu_de_pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_58bj8")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_wwkh8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="voltar_ao_jogo" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_gtvhd")
theme_override_font_sizes/font_size = 36
text = "jogar"

[node name="opcoes_in_game" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_gtvhd")
theme_override_font_sizes/font_size = 36
text = "opcoes"

[node name="salvar" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_gtvhd")
theme_override_font_sizes/font_size = 36
text = "salvar"

[node name="sair_do_jogo" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_gtvhd")
theme_override_font_sizes/font_size = 36
text = "sair"

[node name="menu_de_opcoes" parent="." instance=ExtResource("3_h0rh2")]
visible = false
layout_mode = 1

[connection signal="sair_das_opcoes" from="menu_de_opcoes" to="." method="_on_menu_de_opcoes_sair_das_opcoes"]
